--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 	width: 960px;
 	margin: 0 auto;
 	background: #fff;
-	padding: 0 45px 20px;
+	padding: 0 45px 35px;
 }
 
 /* Write all remaining styles here */
@@ -28,8 +28,8 @@ h1{
 	font-weight: normal;
 	color: RGB(156	175	169);
 	padding-bottom: 10px;
-	margin: 0 0 5x;
 	border-bottom: 1px solid #ccc;
+	margin-bottom: 5px;
 }
 
 h2{
@@ -47,8 +47,8 @@ img {
 	border-color: RGB(202	202	202);
 }
 
-a:hover {
-	decoration: underline;
+#press {
+	padding-bottom: 15px;
 }
 
 a img:hover {
@@ -57,4 +57,5 @@ a img:hover {
 
 footer {
 	float: right;
+	font-size: 0.8em;
 }
